fixed some spacing

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -44,10 +44,20 @@ header {
   top: 0;
   background-color: $white;
   z-index: 1;
-  box-shadow: 0px 4px 2px $gray-100;
+  box-shadow: 0px 4px 0px $gray-100;
   z-index: 99;
   .header-logo {
-    height: 4rem;
+    height: 3.5rem;
+    @include media-breakpoint-only(xs) {
+      height: 3rem;
+    }
+    @include media-breakpoint-up(lg) {
+      height: 4rem;
+    }
+  }
+  .nav-icon {
+    font-size: 1rem;
+    background-color: $gray-100 !important;
   }
   .header-nav {
     min-height: 75px;
@@ -57,7 +67,10 @@ header {
   }
   .header-controls,
   .header-nav {
-    gap: $spacer * 2;
+    gap: $spacer * 1.5;
+    @include media-breakpoint-up(xl) {
+      gap: $spacer * 2;
+    }
   }
   .header-search-bar {
     position: relative;
@@ -95,23 +108,26 @@ header {
         border: 0;
         padding: 0;
         width: 0;
-        transition: padding 0.2s ease-in-out, width 0.2s ease-in-out;
+        // transition: padding 0.2s ease-in-out, width 0.2s ease-in-out;
       }
     }
 
     .search-btn {
+      background-color: $gray-100;
       @include media-breakpoint-up(lg) {
         display: none;
       }
     }
 
     .close-btn {
+      background-color: $gray-200;
       display: none;
+      color: $gray-500;
     }
 
     .search-btn,
     .close-btn {
-      min-width: 50px;
+      min-width: 40px;
       font-size: 1rem;
     }
 
@@ -123,70 +139,30 @@ header {
       right: 0;
       background-color: $gray-100;
       max-width: 100%;
-      padding: $spacer;
+      padding: 0px $spacer * 1.5;
       &::before {
         display: block;
-        left: $spacer * 2;
+        left: $spacer * 2.5;
         top: 27px;
       }
       input {
         width: 100%;
-        padding: $input-font-size * 0.8 $input-font-size;
+        padding: $input-font-size * 0.8 0rem;
         padding-left: $spacer * 2.5;
+        border-top-right-radius: 0px;
+        border-bottom-right-radius: 0px;
       }
       .search-btn {
         display: none;
       }
       .close-btn {
-        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-top-left-radius: 0px;
+        border-bottom-left-radius: 0px;
+        --bs-btn-padding-y: 0.86rem;
       }
-    }
-  }
-}
-
-.search-box {
-  display: flex;
-  justify-content: flex-end;
-
-  & > input {
-    border: 0;
-    padding: 0;
-    width: 0;
-    transition: padding 0.2s ease-in-out, width 0.2s ease-in-out;
-  }
-
-  &.open {
-    padding: 10px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    box-sizing: border-box;
-    align-items: center;
-    background-color: #fff;
-    z-index: 1;
-    & > input {
-      display: inline-block;
-      border-radius: 40px;
-      width: 100%;
-      outline: none;
-      padding: 8px;
-      border: none;
-      background: #efefef;
-      border-radius: 5px;
-      height: 40px;
-      width: 100%;
-      text-indent: 40px;
-      background-position: 15px;
-      background-size: 20px;
-      background-image: url("../assets/magnifying-glass (1).png");
-      background-repeat: no-repeat;
-      background-position: 15px;
-      background-size: 20px;
-    }
-    .search-btn {
-      display: none;
     }
   }
 }
